# trade-analysis

./: .gitignore  Cargo.toml  README.md
src/: inventory.rs  main.rs
