[package]
name = "trade-analysis"
version = "0.1.0"
authors = ["Ren Shao <rshao@seek.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
prettytable-rs = "^0.8"
term = "*"
chrono = { version = "0.4", features = ["serde"] }
