[package]
name = "trade-analysis"
version = "0.1.0"
authors = ["Ren Shao <rshao@seek.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
prettytable-rs = "0.10"
term = "1.0"
chrono = { version = "0.4", features = ["serde"] }
